# graphs

./: .gitignore  CMakeLists.txt  README.md  config.sh  run.sh
doc/: bfs.txt  ex5.txt  pagerank.txt  report.tex
doc/results/: core.txt  ex5.txt
include/: array.h  degree.h  graph.h  timer.h
scripts/: Q.sh  bfs.sh  clean.sh  community.sh  coredecomposition.sh  degree.sh  distribution.sh  init.sh  pagerank.sh  size.sh
src/: bfs.c  clean.c  community.py  coredecomposition.c  degree.c  edgelist.c  ex4.c  ex5.c  ex6.py  graph.c  load_structures.c  pagerank.c  pagerank.py  size.c  timer.c  triangles.c
